started work on better implementation

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Testing Canvas Extension</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="dist/canvas.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="dist/canvas.js"></script> -->
+    <!-- <script src="script.js"></script> -->
+    <style>
+        table {
+            border: 1px solid black;
+        }
+    </style>
 </head>
-<body onload="start();">
+<body>
     <div class='example'></div>
 </body>
 </html>
