--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Testing Canvas Extension</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <!-- <script src="dist/canvas.js"></script> -->
-    <!-- <script src="script.js"></script> -->
+    <script src="dist/canvas.js"></script>
+    <script src="script.js"></script>
     <style>
         table {
             border: 1px solid black;
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body onload='start();'>
     <div class='example'></div>
+    <i class="fa fa-circle"></i>
 </body>
 </html>
