--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         table {
             border: 1px solid black;
         }
+        canvas {
+            border: 1px solid black;
+        }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body onload='start();'>
     <div class='example'></div>
-    <i class="fa fa-circle"></i>
 </body>
 </html>
