--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Testing Canvas Extension</title>
-    <script src="dist/canvas.js"></script>
+    <script src="dist/canvas-1.0.js"></script>
     <script src="script.js"></script>
     <style>
         table {
