modified some things, added presentation to git

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name=viewport content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -8,6 +9,8 @@
     <script src="html2canvas.min.js"></script>
     <script src="dist/canvas-1.3.js"></script>
     <script src="script.js"></script>
+    <script src="https://www.geogebra.org/apps/deployggb.js"></script>
+
     <style>
         table {
             border: 1px solid black;
@@ -15,10 +18,30 @@
         canvas {
             border: 1px solid black;
         }
+        body {
+            background-color: aquamarine;
+        }
+        .gbb-element {
+            opacity: 50%;
+        }
+        #dockPanelParent {
+            background-color: aquamarine;
+        }
+        div[role='application'] {
+            background-color: aquamarine;
+        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body onload='start();'>
     <div class='example'></div>
+    <div id="ggb-element"></div>
+    <script>  
+        var params = {"appName": "graphing", "width": 800, "height": 800, "showToolBar": true, "showAlgebraInput": true, "showMenuBar": true };
+        var applet = new GGBApplet(params, true);
+        window.addEventListener("load", function() { 
+            applet.inject('ggb-element');
+        });
+    </script>
 </body>
 </html>
